insert rules content in the web page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>BayStreet 2016 Trading Competition</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,20 +43,23 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Bay Street BBS Trading Event</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Bay Street Trading Competition</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#home">Home</a>
+                        <a class="page-scroll" href="#page-top">Home</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#registration">Registration</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#info">Information & Resources</a>
+                        <a class="page-scroll" href="#info">Rules & Guidelines</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#winning">Winning Price</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#sponsor">Sponsorships</a>
@@ -74,25 +77,13 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Brief introduction about our competition</h1>
+                <h1 id="homeHeading">Welcome to BayStreet 2016 Trading Competition</h1>
                 <hr>
                 <p>Lorem Ipsum is a dummy text that is mainly used by the printing and design industry. It is intended to show how the type will look before the end product is available. <br/>Lorem Ipsum has been the industry's standard dummy text ever since the 1500:s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <a href="#registration" class="btn btn-primary btn-xl page-scroll">Register Now</a>
             </div>
         </div>
     </header>
-
-    <section class="bg-primary" id="home">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
-                    <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="no-padding" id="registration">
         <div class="container">
@@ -106,70 +97,122 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Information & Resources</h2>
+                    <h2 class="section-heading">Rules & Guidelines</h2>
                     <hr class="primary">
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="panel-group" id="accordion">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">1. Detail</a>
-                            </h4>
-                        </div>
-                        <div id="collapseOne" class="panel-collapse collapse in">
-                            <div class="panel-body">
-                                <p>HTML stands for HyperText Markup Language. HTML is the main markup language for describing the structure of Web pages. <a href="http://www.tutorialrepublic.com/html-tutorial/" target="_blank">Learn more.</a></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">2. Trading Platform</a>
-                            </h4>
-                        </div>
-                        <div id="collapseTwo" class="panel-collapse collapse in">
-                            <div class="panel-body">
-                                <p>Bootstrap is a powerful front-end framework for faster and easier web development. It is a collection of CSS and HTML conventions. <a href="http://www.tutorialrepublic.com/twitter-bootstrap-tutorial/" target="_blank">Learn more.</a></p>
-                            </div>
-                            <div class="container text-center">
-                                <iframe width="500" height="315"
-                                        src="https://www.youtube.com/embed/XGSy3_Czz8k">
-                                </iframe>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">3. Rules</a>
-                            </h4>
-                        </div>
-                        <div id="collapseThree" class="panel-collapse collapse in">
-                            <div class="panel-body">
-                                <ul style="list-style-type:disc">
-                                  <li>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</li>
-                                  <li>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</li>
-                                  <li>Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.</li>
-                                  <li>Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate, nunc.</li>
-                                </ul>
-                                <div class="container text-center">
-                                    <div class="call-to-action">
-                                        <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button bg-dark">Download Now!</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                 <div class="panel-body">
+                    <li><b>Game Name: </b>Bay Street Trading Competition</li>
+                    <li><b>Team size: </b>1 - 3 people</li>
+                    <li><b>Team registration fee: </b>35 dollar per team</li>
+                    <li><b>Official Trading Period</b><br/><span>2016 09.12th to 10.12th NO late entry allowed<span></li>
+                    <li>
+                        <b>Initial Capital</b>
+                        <br/><span>CAD 1,000,000 cash + USD 1,000,000 cash, deposited in one CAD account and one USD account<span>
+                        <br/><span><b>Note: </b></span>you can only use CAD account to buy securities that are in Canadian dollars, and use USD account to buy securities that are in U.S. dollars.
+                    </li>
+                    <li>
+                        <b>Financial Instruments</b>
+                        <br/><span>Any equities, ETFs, and options that are exchange-traded and can be found on Investopedia Stock Simulator platform, including but not limited to common shares, preferred shares, ADR, ETFs, options, etc. that are listed on exchanges in North America.<span>
+                    </li>
+                    <li>
+                        <b>Ending Portfolio Value</b>
+                        <br/><span>The period-end portfolio value will be determined by the total account value (CAD account and USD account) as at the end of  2016.10.12th When calculating the total account value, the USD account value will be converted into CAD equivalents by using New York 4pm USDCAD spot exchange Rate as of 2016.10.12th.(4pm USDCAD spot exchange Rate is provided by Bloomberg. <a href="http://www.bloomberg.com/quote/USDCAD:CUR" target="_blank">http://www.bloomberg.com/quote/USDCAD:CUR </a>) </span>
+                    </li>
+                    <li>
+                        <b>Minimum Number of Trades</b>
+                        <br/><span>To have a valid ranking, you have to execute at least 1 trade during the competition period.</span>
+                    </li>
+                    <li>
+                        <b>Delayed Quotes and Market Order Execution</b>
+                        <br/><span>Delayed Quotes – Investopedia Simulator uses a delayed datafeed from the exchange (around 20 minutes).</span>
+                        <br/><span>Delayed Market Order Execution – due to the delayed datafeed, we implemented a 20-minute delay in executing market orders to avoid arbitrage. </span>
+                    </li>
+                    <li>
+                        <b>Margin and Short Selling</b>
+                        <br/><span>Both margin trading and short-selling are permitted (with certain limitations).  Your account must maintain a minimum margin balance to avoid getting margin call (by email) and forced liquidation.   In other words, your buying power must be greater than zero.  The buying power is calculated using the following formula: </span>
+                        <br/><br/><span>Buying Power = Total Cash + (Total Stocks * 50%) - (Shorted Stock * 150%)</span>
+                        <br/><br/><span>For details, refer to the links below:</span>
+                        <br/><span>How does margin work? </span>
+                        <br/><span><a href="http://www.investopedia.com/simulator/help/margin.aspx" target="_blank">http://www.investopedia.com/simulator/help/margin.aspx</a></span>
+                        <br/><br/><span>Why did I get a margin call?</span>
+                        <br/><span><a href="http://www.investopedia.com/simulator/help/margincall.aspx" target="_blank">http://www.investopedia.com/simulator/help/margincall.aspx</a></span>
+                        <br/><br/><span>I just got an email saying my account has been liquidated! Why did this happen?</span>
+                        <br/><span><a href="http://www.investopedia.com/simulator/help/forcedsell.aspx" target="_blank">http://www.investopedia.com/simulator/help/forcedsell.aspx</a></span>
+                        <br/><br/><span>Margin interest will be charged at an annualized rate of 6.0%.</span>
+                        <br/><br/><span>There’re certain limitations on short-selling.  Refer to section “Restrictions” for details.</span>
+                    </li>
+                    <li>
+                        <b>Brokerage Commission</b>
+                        <br/><span>Equities/ETF: $29.99 per trade</span>
+                        <br/><span>Options: $29.99 + $5.00 per contract</span>
+                    </li>
+                    <li>
+                        <b>Interest</b>
+                        <br/><span>Cash balance: 0.0%</span>
+                        <br/><span>Borrowed funds: 6.0%</span>
+                    </li>
+                    <li>
+                        <b>Restrictions</b>
+                        <br/><span>a) Writing options are NOT supported at the moment</span>
+                        <br/><span>b) Mutual funds and bonds are not available for trading</span>
+                        <br/><span>c) Quick Sell Limit - to reflect the fact that we are working with delayed data, you will not be able to sell (buy) a security within the first 15-minute period after buying (short-selling) the security. This can help prevent users from "cheating" by trading in and out of a security using real-time data.</span>
+                        <br/><span>d) Daily Volume Limit - Trades cannot exceed 10% of volume for the day. This applies to both equities and options.  This rule reduces the chance of achieving unreasonable returns by trading unrealistic amount of shares/number of contracts.</span>
+                        <br/><span>e) Minimum Price Rule - Only securities over $1 are allowed to be traded long, and only securities over $2 are allowed to be traded short. Minimum stock for margin is only allowed for stocks over$2.   Penny stocks are more prone to manipulation from stock promoters and can have erratic trading patterns. </span>
+                        <br/><span>f) Diversification Requirement – To help prevent “gambling”, any particular options contract is limited to 10% of your starting cash.  Equity position is limited to 30% of your starting cash. </span>
+                        <br/><span>g) In order to avoid copying the same trading strategies from other participants, the portfolio holding information is not viewable to other people. </span>
+                    </li>
+                    <li>
+                        <b>Restrictions</b>
+                        <br/><span>a) Writing options are NOT supported at the moment</span>
+                        <br/><span>b) Mutual funds and bonds are not available for trading</span>
+                        <br/><span>c) Quick Sell Limit - to reflect the fact that we are working with delayed data, you will not be able to sell (buy) a security within the first 15-minute period after buying (short-selling) the security. This can help prevent users from "cheating" by trading in and out of a security using real-time data.</span>
+                        <br/><span>d) Daily Volume Limit - Trades cannot exceed 10% of volume for the day. This applies to both equities and options.  This rule reduces the chance of achieving unreasonable returns by trading unrealistic amount of shares/number of contracts.</span>
+                        <br/><span>e) Minimum Price Rule - Only securities over $1 are allowed to be traded long, and only securities over $2 are allowed to be traded short. Minimum stock for margin is only allowed for stocks over$2.   Penny stocks are more prone to manipulation from stock promoters and can have erratic trading patterns. </span>
+                        <br/><span>f) Diversification Requirement – To help prevent “gambling”, any particular options contract is limited to 10% of your starting cash.  Equity position is limited to 30% of your starting cash. </span>
+                        <br/><span>g) In order to avoid copying the same trading strategies from other participants, the portfolio holding information is not viewable to other people. </span>
+                    </li>
+                    <li>
+                        <b>Competition conference rules</b>
+                        <br/><span>The top 10 performer will be able to move forward to the final investment conference, where each participant will be provided with 5 minutes presentation to present his or her investment strategy/philosophy used in the past month.  The winner will be decided by both the previous month’s performance and the stock pitches performance judged by the industry professional.  The conference will be concluded by presenting the first/second/ third place winner each for one candidate.</span>
+                        <br/><span>A) Top 10 performance is evaluated by the ending portfolio balance after the currency conversion as described in the above ending portfolio value.  </span>
+                        <br/><span>B) The final conference’s grade will be determined by the below formula: </span>
+                        <br/><span>10% for the previous one month stock return ranking, the maximum value is 10 and the minimum is 1, then assigned weight 10%. </span>
+                        <br/><span>90% for the stock pitches score provided by the judger (simple average of all scores supplied), then assigned the weight 90%. </span>
+                    </li>
+                    <i>We strongly encourage all participants to carefully review the Simulator Help Topics and FAQ. <a href="http://www.investopedia.com/simulator/help/" target="_blank">http://www.investopedia.com/simulator/help/</a></i>
                 </div>
             </div>
         </div>
     </section>
 
+    <section id="winning">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Winning Price</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="panel-body">
+                    <li><b>Cash Price</b>
+                        <br/><br/><span>First place price: 600 CAD</span>
+                        <br/><span>Second place price: 300 CAD</span>
+                        <br/><span>Third place price: 100 CAD</span>
+                        <br/><br/><span>Highest return price: 300 CAD</span>
+                        <br/>
+                    </li>
+                    <li><b>Internship potential opportunities </b></li>
+                </div>
+            </div>
+        </div>
+    </section>
    <!--  <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
